[package]
name = "gd-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/lolikarbuzik/gd-rs"
keywords = ["geometry-dash"]
categories = ["parsing"]
description = "Easily access gd save files"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
directories = "5.0.1"
libflate = "2.0.0"
maplit = "1.0.2"
plist = "1.6.0"
serde = "1.0.193"
serde_derive = "1.0.193"
